--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="container-pic">
                   <img  src="/assets/img/profile/foto-curriculo-tiny.jpg" alt="profile">
                   <h3>Walter Daniel Carrizo</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam omnis vero, hic asperiores suscipit cum itaque nobis, dignissimos nemo reprehenderit natus enim harum optio ab molestiae. Excepturi facere quod error?</p>
+                  <p>Estudiante de la carrera Programador Universiatario en la UNT. Siempre con ganas de aprender, soy proactivo, amante de la tecnologia, fotografías y de la naturaleza.</p>
                 </div>
             </div>
             <div class="col bg-skill bg-about pt-4 px-3">
